# gbl

./: .gitignore  .gitlab-ci.yml  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/: dependabot.yml
benches/: empty.rs  large.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: app_image.rs  gbl.rs
src/: appimage.rs  crypto.rs  error.rs  key.rs  lib.rs  main.rs  marker.rs  utils.rs
test-data/: aes-key-tokens  different-key  different-key-tokens.txt  different-key.pub  rsa-key  rsa-key.pub  signing-key  signing-key-tokens.txt  signing-key.pub
test-data/1.1/: 1.1.gbl
test-data/empty/: empty-encrypted.gbl  empty-signed-encrypted.gbl  empty-signed.gbl  empty.gbl
tests/: empty.rs  fuzz.rs  prop_version.rs
tests/fuzz-data/: oom1
