[package]
name = "gbl"
version = "0.3.1"
authors = [
    "Jonas Schievink <js@1aim.com>",
    "Ferdia McKeogh <f.mckeogh@1aim.com>",
]
description = "GBL firmware file handling library"
documentation = "https://docs.rs/gbl"
repository = "https://github.com/dac-gmbh/gbl"
keywords = ["firmware", "ota", "upgrade", "flash", "image"]
categories = ["embedded"]  # not entirely accurate
readme = "README.md"
edition = "2018"
license = "MIT"
# large testfile is too large for crates.io, so ignore the tests using it
exclude = ["benches/large.rs", "test-data/large/**"]


# cargo-release configuration
[package.metadata.release]
tag-message = "{{version}}"
no-dev-version = true
pre-release-commit-message = "Release {{version}}"

# Change the changelog's `Unreleased` section to refer to this release and prepend new `Unreleased` section
[[package.metadata.release.pre-release-replacements]]
file    = "CHANGELOG.md"
search  = "## Unreleased"
replace = "## Unreleased\n\nNo changes.\n\n## {{version}} - {{date}}"

# Bump the version referenced by the `html_root_url` attribute in `lib.rs`
[[package.metadata.release.pre-release-replacements]]
file    = "src/lib.rs"
search  = "https://docs.rs/gbl/[a-z0-9\\.-]+"
replace = "https://docs.rs/gbl/{{version}}"

[dependencies]
byteorder = "1.2.6"
num-traits = "0.2.6"
num-derive = "0.3.0"
crc32fast = "1.1.2"
log = "0.4.5"
env_logger = "0.7.0"
ring = "0.14.2"
untrusted = "0.6.2"
structopt = "0.2.10"
openssl = "0.10.12"
hex = "0.4.0"
either = "1.5.0"

# Public
uuid = "0.7.1"
failure = "0.1.2"

[dev-dependencies]
criterion = "0.3.0"

[[bench]]
name = "empty"
harness = false

[[bench]]
name = "large"
harness = false

[profile.bench]
debug = true
